Fixing some layout problem

--- a/client/src/components/mediaPlayer/LocalVideoPlayer.css
+++ b/client/src/components/mediaPlayer/LocalVideoPlayer.css
@@ -1,6 +1,6 @@
 .localVideoPlayer{
-    height:25vh;
-    width:35vw;
+    height:30vh;
+    width:20vw;
     position:fixed;
     bottom: 5px;
     right: 5px;
